fix: Media queries and javascript resize functions for contact box. (text alignment was breaking on resize)
- Going from smaller device window to larger would cause misalignment to contact box fields.
- Also on tablet screen size and smaller contact box would never center.
- I noticed that $(window).resize() was never firing and there was an extra ")" causing the else if statement
of checkSize() to never evaluate to true and remove styling.

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,7 @@ Sources: - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Lay
 
 .topContactsBox {
     float: right;
+    text-align: left;
 }
 
 .topContactsBox h2 {
@@ -240,6 +241,7 @@ Sources: - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Lay
     .topContactsBox {
         float: none;
         display: inline-block;
+        text-align: left;
     }
 }
 
@@ -259,13 +261,11 @@ Sources: - https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Lay
     .topContactsBox {
         float: none;
         display: inline-block;
+        text-align: left;
     }
     #skills-list .label {
         font-size: 10px;
         margin: 2px;
-    }
-    .project-entry img {
-        margin-bottom: 5px;
     }
     #map {
         height: 80%;
